Error handling improved
